--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
     </div>
     <div class="col-md-6">
       <h5>Our Office</h5>
-      <p>Brainiac IT Solution, Bhubaneswar, India</p>
+      <p>Brainiac IT Solution, Bhubaneswar, India,</p>
       <p><i class="bi bi-telephone-fill"></i> +91 8457915987</p>
       <p><i class="bi bi-envelope-fill"></i> brainiaccoachinginstitute@gmail.com</p>
       <iframe 
@@ -180,6 +180,7 @@ function showThankYou() {
 
 </body>
 </html>
+
 
 
 
